# TigerCompiler

./: BUILD.sh  CLEAN.sh  README.md
core/: CMakeLists.txt  absyn.c  absyn.h  assem.c  assem.h  canon.c  canon.h  codegen.c  codegen.h  env.c  env.h  errormsg.c  errormsg.h  frame.c  frame.h  lex.yy.c  main.c  prabsyn.c  prirtree.c  prirtree.h  semant.c  semant.h  symbol.c  symbol.h  table.c  table.h  temp.c  temp.h  tiger.lex  tiger.lex.back  tiger.y  translate.c  translate.h  tree.c  tree.h  types.c  types.h  util.c  util.h  y.output  (+2 more)
testcase/A2/9.2.1.1内建类型声明/: A2BasicTypeDeclaration.tig  ASTree.json
testcase/A2/9.2.1.1数组声明/: A2ArrayTypeDeclaration.tig  ASTree.json
testcase/A2/9.2.1.1记录声明/: A2RecordTypeDeclaration.tig  ASTree.json  IRTree.json  result.s
testcase/A2/9.2.1.1递归声明/: A2RecursiveTypeDeclaration.tig  ASTree.json
testcase/A2/9.2.1.2变量声明/: A2VariableDeclaration.tig  ASTree.json  IRTree.json  fragment.json  result.s
testcase/A2/9.2.1.3过程声明/: A2ProcessDeclaration.tig  ASTree.json  fragment.json  result.s
testcase/A2/9.2.1.4非法递归声明/: A2InvalidCycleDeclaration.tig
testcase/A2/9.2.1.5递归过程声明/: A2RecursiveProcessDeclaration.tig  ASTree.json  fragment.json  result.s
testcase/A2/9.2.2.1局部变量/: A23LocalVariable.tig  ASTree.json  IRTree.json  result.s
testcase/A2/9.2.2.2函数参数/: A23FunctionParameter.tig  ASTree.json  IRTree.json  fragment.json  result.s
testcase/A2/9.2.2.3名字空间/: A23TwoNamespace.tig  ASTree.json  IRTree.json  result.s
testcase/A2/9.2.2.4局部重声明/: A23LocalOverrideDeclaration.tig  ASTree.json  fragment.json  result.s
visual/: index.html
(+105 files in other folders)
